test/correct/PMC15.hs
module PMC15 where

main :: Bool
main = not2 False

not2 :: Bool -> Bool
not2 True = False
